# nshm-toshi-api

./: .bumpversion.cfg  .env.example  .gitignore  .yarnrc.yml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  DYNAMIC_SCHEMA_ARE_DUMB_OR_ARE_THEY.md  PROJECT_HEALTHCARE_PLAN.md  README.md  app.py  debug_api.py  demo_upload.py  demo_upload_2.py  package.json  pyproject.toml  pytest.ini  requirements.txt  serverless.yml  setup.cfg  setup.py  strawberry_poc_handler.py  stress_test_queries.md  swagger.yaml  test_requirements.txt
.github/workflows/: deploy-aws-lambda-test.yml  deploy-aws-lambda.yaml  run-tests-on-pull-request.yaml  run-tests.yaml  strawberry-poc-tests.yaml
.llm/: .session  log.jsonl
api/: api.py  resources.py
api-option-2/: api-option-2.py
auth/: .env.example  AUTH_PLAN.md  IDP_INTEGRATION_OPTIONS_STUDY.md  IDP_INTEGRATION_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  cognito_setup.py  create_m2m_secret.py  create_users.py  iam_roles.py  middleware.py  rotate_m2m_secret.py  test_e2e.py  test_middleware.py  toshi_auth.py
auth/authorizer/: handler.py
auth/tests/: test_e2e.py  test_handler.py  test_middleware.py  test_middleware_enforcement.py
auth_migration/: IDP_INTEGRATION_OPTIONS_STUDY.md  IDP_INTEGRATION_PLAN.md
auth_migration/auth/: .env.example  README.md  SPIKE_AUTH_PLAN.md  cognito_setup.py  iam_roles.py  test_e2e.py  toshi_auth.py
demo/: Demo 1 - Slide 1 - An intro to the nshm-toshi-api.md  Demo 1 - Slide 10 - Auth.md  Demo 1 - Slide 2 - Architecture.md  Demo 1 - Slide 3 - Graphql.md  Demo 1 - Slide 4 - API features.md  Demo 1 - Slide 4 - Auth.md  Demo 1 - Slide 5 - queries and mutations.md  Demo 1 - Slide 6  - API features.md  Demo 1 - Slide 7 - toshi clients.md  Demo 1 - Slide 9 - Auth.md  Demo 2 - Search API.md  Demo 2 - StrongMotionStation.md  demo_upload.py  demo_upload_2.py
docs/: ALTERNATE_STACK_QUESTIONS.md  AUTH_GUIDE.md  MIGRATION_RUNBOOK.md  PROJECT_HEALTHCARE_PLAN.md  class_model_0.plantuml  class_model_custom.plantuml  cognito-permission-model-reference.md  smoke-test-learnings.md
docs/adrs/: 0001-graphql-schema-evolution-strategy.md  ADR-001-graphql-schema-evolution-strategy.md  ADR-002-schema-interface-hierarchy-and-input-naming.md  ADR-003-cognito-permission-model.md  ADR-004-code-reorganization.md  README.md
docs/security/: VULNERABILITY_REGISTER.md
graphql_api/: .env.tests  README.md  __init__.py  api.py  app.py  auth.py  cloudwatch.py  config.py  data.py  data_fs.py  data_s3.py  library_version_check.py  local_config.py  logging.yaml  logging_aws.yaml  pytest.ini  schema.py  setup.cfg  test_rupture_generation_schema.py  test_schema.py
graphql_api/data/: __init__.py  base_data.py  data_manager.py  file_data.py  file_relation_data.py  ids.py  models.py  s3.py  table_data.py  thing_data.py  thing_relation_data.py
graphql_api/data_s3/: __init__.py  base_s3_data.py  data_manager.py  file_data.py  file_relation_data.py  s3_write_through_cache.py  table_data.py  task_data.py  task_file_data.py  thing_data.py  thing_relation_data.py
graphql_api/dynamodb/: __init__.py  models.py
graphql_api/models/: _dispatch.py  aggregate_inversion_solution.py  automation_task.py  file.py  file_interface.py  general_task.py  inversion_solution.py  inversion_solution_interface.py  inversion_solution_nrml.py  inversion_solution_union.py  openquake_hazard_config.py  openquake_hazard_solution.py  openquake_hazard_task.py  predecessor.py  predecessors_interface.py  relations.py  rupture_set.py  scaled_inversion_solution.py  sms_file.py  strong_motion_station.py  table.py  thing.py  time_dependent_inversion_solution.py
graphql_api/schema/: __init__.py  data_file.py  event.py  file.py  file_relation.py  get_datastore_handler.py  object_identities.py  opensha_task.py  schema.py  search_manager.py  table.py  task.py  task_file.py  task_result.py  task_task_relation.py  thing.py
graphql_api/tests/: conftest.py  (+88 more)
openapi/: setup.py
scripts/: elastic_cli.py
spike/: IDP_INTEGRATION_OPTIONS_STUDY.md  IDP_INTEGRATION_PLAN.md
spike/strawberry_poc/: COVERAGE_GAPS.md  README.md  app.py  auth.py  pyproject.toml  schema.py
spike/strawberry_poc/data/: dynamo.py  ids.py  models.py  s3.py  search.py
spike/strawberry_poc/models/: _dispatch.py  aggregate_inversion_solution.py  automation_task.py  common.py  file.py  file_interface.py  general_task.py  inversion_solution.py  inversion_solution_interface.py  inversion_solution_nrml.py  inversion_solution_union.py  object_identity.py  openquake_hazard_config.py  openquake_hazard_solution.py  openquake_hazard_task.py  page_info.py  predecessor.py  predecessors_interface.py  relations.py  rupture_set.py  scaled_inversion_solution.py  sms_file.py  strong_motion_station.py  table.py  thing.py  time_dependent_inversion_solution.py
spike/strawberry_poc/tests/: conftest.py  runzi_corpus_data.py  test_aggregate_inversion_solution.py  test_auth.py  test_auth_http.py  test_automation_task.py  test_automation_task_schema_legacy.py  test_bugfix_167_fileunion_aggregate.py  test_bugfix_217_general_task.py  test_bugfix_252_table_create.py  test_bugfix_gap14_swept_arg_validation.py  test_bugfix_gap4_rupture_set.py  test_client_mutation_id_compat.py  test_create_file_validation.py  test_file_predecessors_legacy.py  test_file_relation.py  test_file_relation_bugfix_126.py  test_file_relation_compression.py  test_general_task.py  test_general_task_schema_legacy.py  test_inversion_solution.py  test_inversion_solution_bug_93.py  test_inversion_solution_interface.py  test_inversion_solution_nrml.py  test_inversion_solution_predecessors_legacy.py  test_inversion_solution_schema_legacy.py  test_legacy_class_names_present.py  test_nodes_query.py  test_nshm_toshi_client_compat.py  test_object_identities_legacy.py  test_openquake.py  test_openquake_hazard_solution_legacy.py  test_page_info_compat.py  test_pagination.py  test_post_url_all_file_types.py  test_reindex.py  test_runzi_query_corpus.py  test_rupture_generation_task.py  test_rupture_set.py  test_rupture_set_mutation_checks.py  (+15 more)
spike/strawberry_poc/tools/: dump_poc_sdl.py
(+130 files in other folders)
