[project]
name = "nshm-toshi-api"
version = "0.2.7"
description = "the object store used by NZSHM project"
authors = [
    {name = "Chris B Chamberlain",email = "chrisbc@artisan.co.nz"},
    {name="NSHM Compute Working Group", email="nshm@gns.cri.nz"}
]
readme = "README.md"
requires-python = "^3.12"
license = "AGPL-3.0-or-later"


dependencies = [
    "backoff",
    "boto3 (>=1.24.57)",
    "elasticsearch (>=7.0.0,<8.0)",
    "elasticsearch-dsl",
    "flask (>=3.0.3)",
    "flask-cors (>=6.0)",
    "gql",
    "graphene (>=3.3)",
    "graphql-server (==3.0.0b7)",
    "nzshm-common",
    "pynamodb",
    "python-benedict",
    "python-dateutil (>=2.8.2)",
    "pyyaml (>=6.0.1)",
    "pyyaml",
    "requests-aws4auth",
    "requests-toolbelt",
]

[project.scripts]
elastic_cli = 'scripts.elastic_cli:main'

[tool.poetry]
packages = [{include = "graphql_api"}]

[tool.poetry.group.dev]
optional = true

[dependency-groups]
dev = [
    "black",
    "bump2version",
    "click",
    "flake8-docstrings",
    "flake8",
    "isort",
    "moto (>=4.0,<5.0)",
    "mypy",
    "pip-audit",
    "pre-commit",
    "pytest-cov",
    "pytest",
    "requests-mock (>=1.12.1,<2.0.0)",
    "safety",
    "sgqlc",
    "tox",
    "types-python-dateutil",
    "types-pyyaml",
    "types-requests",
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py


[build-system]
requires = ["poetry-core>=2.2,<3.0"]
build-backend = "poetry.core.masonry.api"
