[project]
name = "nshm-toshi-api"
version = "0.6.0"
description = "the object store used by NZSHM project"
authors = [
    {name = "Chris B Chamberlain",email = "chrisbc@artisan.co.nz"},
    {name="NSHM Compute Working Group", email="nshm@gns.cri.nz"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
license = "AGPL-3.0-or-later"

dependencies = [
    "backoff",
    "boto3>=1.24.57",
    "elasticsearch-dsl",
    "elasticsearch7-compatible",
    "flask>=3.0.3",
    "flask-cors>=6.0",
    "gql",
    "graphene>=3.3",
    "graphql-server==3.0.0b7",
    "nzshm-common",
    "pynamodb",
    "python-benedict",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.1",
    "PyJWT[crypto]>=2.8.0",
    "requests-aws4auth",
    "requests-toolbelt",
]

[project.scripts]
elastic_cli = 'scripts.elastic_cli:main'

[dependency-groups]
dev = [
    "bump2version",
    "click",
    "moto",
    "mypy",
    "pip-audit",
    "pre-commit",
    "pytest-cov",
    "pytest",
    "requests-mock>=1.12.1,<2.0.0",
    "ruff",
    "safety",
    "sgqlc",
    "tox",
    "tox-uv",
    "types-python-dateutil",
    "types-pyyaml",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graphql_api"]

[tool.uv]
exclude-newer = "1 week"
exclude-newer-package = { "nzshm-common" = false }

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "G004"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"graphql_api/tests/**" = ["E501"]

[tool.ruff.format]
quote-style = "preserve"
