[project]
name = "nshm-toshi-api"
version = "0.7.0"
description = "the object store used by NZSHM project"
authors = [
    {name = "Chris B Chamberlain",email = "chrisbc@artisan.co.nz"},
    {name="NSHM Compute Working Group", email="nshm@gns.cri.nz"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
license = "AGPL-3.0-or-later"

dependencies = [
    "backoff",
    "boto3>=1.24.57",
    "mangum>=0.17",
    "strawberry-graphql[fastapi]>=0.243.0",
    "elasticsearch>=9",
    "elasticsearch7-compatible",
    "gql",
    "nzshm-common",
    "pydantic>=2.0",
    "python-benedict",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.1",
    "PyJWT[crypto]>=2.8.0",
    "requests-aws4auth",
    "requests-toolbelt",
]

[project.scripts]
elastic_cli = 'scripts.elastic_cli:main'

[dependency-groups]
dev = [
    "bump2version",
    "click",
    "httpx>=0.27",
    "moto",
    "mypy>=2",
    "pip-audit",
    "pre-commit",
    "pytest-cov",
    "pytest",
    "requests-mock>=1.12.1,<2.0.0",
    "ruff",
    "safety",
    "sgqlc",
    "testcontainers>=4.0",
    "tox",
    "tox-uv",
    "types-python-dateutil",
    "types-pyyaml",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graphql_api"]

[tool.uv]
exclude-newer = "1 week"
exclude-newer-package = { "nzshm-common" = false }

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "graphql_api.models.*"
# Strawberry relay.Node **kwargs pattern triggers false-positive override warnings;
# ListConnection[FileRelation/TaskTaskRelation] triggers false-positive type-var warnings;
# strawberry.lazy() string forward refs trigger false-positive name-defined warnings.
disable_error_code = ["override", "type-var", "name-defined"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "G004", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# strawberry.lazy() uses string forward refs that are intentionally not imported
"graphql_api/models/*.py" = ["F821"]
# test helpers / fixtures use local imports for clarity and testcontainer lazy-start patterns
"graphql_api/tests/**" = ["E501", "PLC0415"]

[tool.ruff.format]
quote-style = "preserve"

[tool.pytest.ini_options]
testpaths = ["graphql_api/tests"]
markers = [
    "integration: requires a live Elasticsearch instance (ES_ENDPOINT env var)",
]
