[project]
name = "strawberry-poc"
version = "0.1.0"
description = "Strawberry+FastAPI POC for nshm-toshi-api — feasibility spike"
requires-python = ">=3.12"
dependencies = [
    "strawberry-graphql[fastapi]>=0.243.0",
    "boto3>=1.26",
    "mangum>=0.17",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "testcontainers[dynamodb]>=4.0",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires a live Elasticsearch instance (ES_ENDPOINT env var)",
]
