[project]
name = "strawberry-poc"
version = "0.1.0"
description = "Strawberry+FastAPI POC for nshm-toshi-api — feasibility spike"
requires-python = ">=3.12"
dependencies = [
    "strawberry-graphql[fastapi]>=0.243.0",
    "boto3>=1.26",
    "mangum>=0.17",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "testcontainers[dynamodb]>=4.0",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "G004", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
# strawberry.lazy() uses string forward refs that are intentionally not imported
"models/*.py" = ["F821"]
# test helpers / fixtures use local imports for clarity and testcontainer lazy-start patterns
"tests/*.py" = ["PLC0415"]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "models.*"
# Strawberry relay.Node **kwargs pattern triggers false-positive override warnings;
# ListConnection[FileRelation/TaskTaskRelation] triggers false-positive type-var warnings;
# strawberry.lazy() string forward refs trigger false-positive name-defined warnings.
disable_error_code = ["override", "type-var", "name-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires a live Elasticsearch instance (ES_ENDPOINT env var)",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]
